# obsidian-web-server

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix
nix/: module.nix  test.nix
src/: git.rs  main.rs  routes.rs  vault.rs
src/assets/: app.js  index.html  style.css
