[package]
name = "obsidian-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
rust-embed = { version = "8.5", features = ["include-exclude"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[profile.release]
strip = true
